img overflow issue resolved

--- a/CSS/veryLargeScreen.css
+++ b/CSS/veryLargeScreen.css
@@ -283,8 +283,8 @@ ion-icon {
     flex-direction: column;
     color: white;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: lighter;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 
 }
 
@@ -294,7 +294,7 @@ ion-icon {
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
     border-top-left-radius: 20px;
-    z-index: 1000;
+    z-index: -1;
     transition: 0.5s ease;
     text-decoration: none;
 }
@@ -305,6 +305,7 @@ ion-icon {
 
 .blog-Card h1 {
     margin-top: 10px;
+    z-index: 1;
 }
 
 .blog-Card img:hover {
